# EagleAIs

./: .gitignore  README.md  barometer.ipynb  e3d.ipynb  flashy_video.ipynb  pyproject.toml
labelImg/: .gitignore  docker-compose.yml
nbs/: flashy_video.ipynb  make_video.ipynb  yolov8_inference.ipynb  yolov8_train.ipynb
res/: info.txt
src/: canny_edge.py  depth_est.py  depth_est_dpt.py  depth_est_midas.py  point_cloud.py  sem_seg.py  sem_seg_dpt.py  sem_seg_nvidia.py  semseg.py  yolo_obj_detection.py
src/utils/: distorted_img.py  image_utils.py  img2video.py
